--- a/index.html
+++ b/index.html
@@ -1,74 +1,174 @@
 <!DOCTYPE html>
 <html>
-
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Liguifa.github.com : ">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Liguifa.github.com</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/liguifa">View on GitHub</a>
-
-          <h1 id="project_title">Liguifa.github.com</h1>
-          <h2 id="project_tagline"></h2>
-
-        </header>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <script src="../themes/script/jquerymobile/scripts/jquery-1.8.0.min.js"></script>
+    <script src="../themes/script/jquerymobile/scripts/jquery.mobile-1.4.2.min.js"></script>
+    <link href="../themes/script/jquerymobile/css/jquery.mobile-1.4.2.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="/html/css/phone.css" />
+    <title>Windows Phone</title>
+</head>
+<body>
+    <div data-role="page">
+        <div data-role="header" data-theme="b" data-position="fixed">
+            <a href="#right-panel" data-rel="popup" data-transition="slidedown" data-shadow="false data-position-to=" window" class="ui-btn-left ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-left ui-icon-grid">导航</a>
+            <div data-role="panel" id="right-panel" data-position="left" data-theme="b">
+                <ul data-role="listview">
+                    <li><a href="#">Acura</a></li>
+                    <li><a href="#">Audi</a></li>
+                    <li><a href="#">BMW</a></li>
+                    <li><a href="#">Cadillac</a></li>
+                    <li><a href="#">Ferrari</a></li>
+                </ul>
+            </div><!-- /panel -->
+            <a href="#popupLogin" data-rel="popup" data-position-to="window" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-icon-check ui-btn-icon-left ui-btn-b" data-transition="slidedown" data-theme="b">登陆</a>
+            <div data-role="popup" id="popupLogin" data-theme="b" class="ui-corner-all">
+                <form>
+                    <div style="padding:10px 20px;">
+                        <h3>请登录</h3>
+                        <label for="un" class="ui-hidden-accessible">Username:</label>
+                        <input type="text" name="user" id="un" value="" placeholder="username" data-theme="b">
+                        <label for="pw" class="ui-hidden-accessible">Password:</label>
+                        <input type="password" name="pass" id="pw" value="" placeholder="password" data-theme="b">
+                        <button type="submit" class="ui-btn ui-corner-all ui-shadow ui-btn-b ui-btn-icon-left ui-icon-check">登陆</button>
+                    </div>
+                </form>
+            </div>
+            <h1>优美文学网</h1>
+        </div>
+        <div data-role="content">
+            <ul id="list" class="touch" data-role="listview" data-icon="false" data-split-icon="delete">
+                <li>
+                    <a href="Test1.html" data-ajax="false" data-transition="pop">
+                        <img src="../resources/images/img1.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
+                        <h3>爱不曾言</h3>
+                        <p class="topic"><strong>那年那个给我好吃的男人叫“爸爸”</strong></p>
+                        <p>那个叫做爸爸的男人，在我装睡的时候吻了我的脸然后再次离开了。</p>
+                        <p class="ui-li-aside"><strong>五星</strong></p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#demo-mail">
+                        <img src="../resources/images/img2.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
+                        <h3>让我陪你到老</h3>
+                        <p class="topic"><strong>那淡淡的身影</strong></p>
+                        <p>轻轻的叩开了我的心扉 如夏日骤雨般 突然的让我不知所谓</p>
+                        <p class="ui-li-aside"><strong>五星</strong></p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#demo-mail">
+                        <img src="../resources/images/img1.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
+                        <h3>Mike Taylor</h3>
+                        <p class="topic"><strong>Re: This weekend in Maine</strong></p>
+                        <p>Hey little buddy, sorry but I can't make it up to vacationland this weekend. Maybe next weekend?</p>
+                        <p class="ui-li-aside"><strong>3:24</strong>PM</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#demo-mail">
+                        <img src="../resources/images/img1.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
+                        <h3>Redfin</h3>
+                        <p class="topic"><strong>Redfin listing updates for today</strong></p>
+                        <p>There are 3 updates for the home on your watchlist: 1 updated MLS listing and 2 homes under contract.</p>
+                        <p class="ui-li-aside"><strong>2:52</strong>PM</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#demo-mail">
+                        <img src="../resources/images/img1.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
+                        <h3>Angela Smith</h3>
+                        <p class="topic"><strong>Link Request</strong></p>
+                        <p>My name is Angela Smith, SEO Consultant. I've greatly enjoyed looking through your site and I was wondering if you'd be interested in providing a link</p>
+                        <p class="ui-li-aside"><strong>1:24</strong>PM</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#demo-mail">
+                        <img src="../resources/images/img1.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
+                        <h3>Stephen Weber</h3>
+                        <p class="topic"><strong>You've been invited to a meeting at Filament Group in Boston, MA</strong></p>
+                        <p>Hey Stephen, if you're available at 10am tomorrow, we've got a meeting with the jQuery team.</p>
+                        <p class="ui-li-aside"><strong>11:24</strong>AM</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#demo-mail">
+                        <img src="../resources/images/img1.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
+                        <h3>jQuery Team</h3>
+                        <p class="topic"><strong>Boston Conference Planning</strong></p>
+                        <p>In preparation for the upcoming conference in Boston, we need to start gathering a list of sponsors and speakers.</p>
+                        <p class="ui-li-aside"><strong>9:18</strong>AM</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#demo-mail">
+                        <img src="../resources/images/img1.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
+                        <h3>Avery Walker</h3>
+                        <p class="topic"><strong>Re: Dinner Tonight</strong></p>
+                        <p>Sure, let's plan on meeting at Highland Kitchen at 8:00 tonight. Can't wait! </p>
+                        <p class="ui-li-aside"><strong>4:48</strong>PM</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#demo-mail">
+                        <img src="../resources/images/img1.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
+                        <h3>Amazon.com</h3>
+                        <p class="topic"><strong>4-for-3 Books for Kids</strong></p>
+                        <p>As someone who has purchased children's books from our 4-for-3 Store, you may be interested in these featured books.</p>
+                        <p class="ui-li-aside"><strong>4:37</strong>PM</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#demo-mail">
+                        <img src="../resources/images/img1.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
+                        <h3>Mike Taylor</h3>
+                        <p class="topic"><strong>Re: This weekend in Maine</strong></p>
+                        <p>Hey little buddy, sorry but I can't make it up to vacationland this weekend. Maybe next weekend?</p>
+                        <p class="ui-li-aside"><strong>3:24</strong>PM</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#demo-mail">
+                        <img src="../resources/images/img1.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
+                        <h3>Redfin</h3>
+                        <p class="topic"><strong>Redfin listing updates for today</strong></p>
+                        <p>There are 3 updates for the home on your watchlist: 1 updated MLS listing and 2 homes under contract.</p>
+                        <p class="ui-li-aside"><strong>2:52</strong>PM</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#demo-mail">
+                        <img src="../resources/images/img1.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
+                        <h3>Angela Smith</h3>
+                        <p class="topic"><strong>Link Request</strong></p>
+                        <p>My name is Angela Smith, SEO Consultant. I've greatly enjoyed looking through your site and I was wondering if you'd be interested in providing a link</p>
+                        <p class="ui-li-aside"><strong>1:24</strong>PM</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#demo-mail">
+                        <img src="../resources/images/img1.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
+                        <h3>Stephen Weber</h3>
+                        <p class="topic"><strong>You've been invited to a meeting at Filament Group in Boston, MA</strong></p>
+                        <p>Hey Stephen, if you're available at 10am tomorrow, we've got a meeting with the jQuery team.</p>
+                        <p class="ui-li-aside"><strong>11:24</strong>AM</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#demo-mail">
+                        <img src="../resources/images/img1.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
+                        <h3>jQuery Team</h3>
+                        <p class="topic"><strong>Boston Conference Planning</strong></p>
+                        <p>In preparation for the upcoming conference in Boston, we need to start gathering a list of sponsors and speakers.</p>
+                        <p class="ui-li-aside"><strong>9:18</strong>AM</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div data-role="footer" data-theme="b">
+            <h1>优美文学网</h1>
+        </div>
     </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+</body>
 </html>
