--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <script src="/Themes/script/jquerymobile/scripts/jquery-1.8.0.min.js"></script>
-    <script src="/Themes/script/jquerymobile/scripts/jquery.mobile-1.4.2.min.js"></script>
-    <link href="/Themes/script/jquerymobile/css/jquery.mobile-1.4.2.css" rel="stylesheet" />
+    <script src="Themes/script/jquerymobile/scripts/jquery-1.8.0.min.js"></script>
+    <script src="Themes/script/jquerymobile/scripts/jquery.mobile-1.4.2.min.js"></script>
+    <link href="Themes/script/jquerymobile/css/jquery.mobile-1.4.2.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="/html/css/phone.css" />
     <title>Windows Phone</title>
 </head>
@@ -40,7 +40,7 @@
             <ul id="list" class="touch" data-role="listview" data-icon="false" data-split-icon="delete">
                 <li>
                     <a href="Test1.html" data-ajax="false" data-transition="pop">
-                        <img src="/Resources/images/img1.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
+                        <img src="Resources/images/img1.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
                         <h3>爱不曾言</h3>
                         <p class="topic"><strong>那年那个给我好吃的男人叫“爸爸”</strong></p>
                         <p>那个叫做爸爸的男人，在我装睡的时候吻了我的脸然后再次离开了。</p>
@@ -49,7 +49,7 @@
                 </li>
                 <li>
                     <a href="#demo-mail">
-                        <img src="/Resources/images/img2.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
+                        <img src="Resources/images/img2.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
                         <h3>让我陪你到老</h3>
                         <p class="topic"><strong>那淡淡的身影</strong></p>
                         <p>轻轻的叩开了我的心扉 如夏日骤雨般 突然的让我不知所谓</p>
@@ -58,7 +58,7 @@
                 </li>
                 <li>
                     <a href="#demo-mail">
-                        <img src="../resources/images/img1.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
+                        <img src="Resources/images/img1.jpg" style="height:100%;margin-top:10px;margin-left:5px;" />
                         <h3>Mike Taylor</h3>
                         <p class="topic"><strong>Re: This weekend in Maine</strong></p>
                         <p>Hey little buddy, sorry but I can't make it up to vacationland this weekend. Maybe next weekend?</p>
